<resources>
    <string name="app_name">Calculator</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="percentage">%</string>
    <string name="sign">+/-</string>
    <string name="clearText">AC</string>
    <string name="divideText">/</string>
    <string name="multiplyText">*</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>
    <string name="naturalLogText">ln</string>
    <string name="squareRootText">√</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="backspace"> </string>
    <string name="initialDisplay">Enter a value</string>

</resources>