<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        tools:context=".MainActivity">

    <EditText
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/initialDisplay"
            android:textColorHint="@color/tanAccent"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:id="@+id/displayInputText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="16dp" android:id="@+id/constraintLayout2">

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="signButton"
            android:text="@string/sign"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroButton"
            android:text="@string/zeroText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/button18"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="divideButton"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeButton"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightButton"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenButton"
            android:text="@string/sevenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="squaredButton"
            android:text="@string/xSquaredText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="multiplyButton"
            android:text="@string/multiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="percentageButton"
            android:text="@string/percentage"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveButton"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourButton"
            android:text="@string/fourText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="subtractButton"
            android:text="@string/subtractText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineButton"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoButton"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button23" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneButton"
            android:text="@string/oneText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="decimalButton"
            android:text="@string/decimalText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button21"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="naturalLogButton"
            android:text="@string/naturalLogText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="xPowerYButton"
            android:text="@string/xPowerYText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="clearButton"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixButton"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="addButton"
            android:text="@string/addText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="squareRootButton"
            android:text="@string/squareRootText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="equalsButton"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>